# banking-mcp-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  AUDIT.md  Dockerfile  MCP_REWRITE_PLAN.md  PROJECT_FILE_FUNCTION_GUIDE_BG.md  README.md  TRANSACTION_CATEGORIES_INTEGRATION_BG.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf
.claude/: settings.local.json
banking_mcp/: config.py  executor.py  server.py  tools_api.py
banking_mcp/adapters/: bnb_fx.py  ebank_http.py  provider_adapter.py  provider_registry.py
banking_mcp/analytics/: core.py
banking_mcp/api/: __init__.py  middleware.py  router.py  schemas.py
banking_mcp/audit/: __init__.py  logger.py  redaction.py
banking_mcp/auth/: jwt.py  provider_auth.py
banking_mcp/canonical/: mapping.py  models.py  normalize.py
banking_mcp/classification/: __init__.py  keyword_index.py  stats.py
banking_mcp/core/: circuit_breaker.py
banking_mcp/dashboard/: __init__.py  app.py  generator.py  manager.py  utils.py  widgets.py
banking_mcp/dashboard/pages/: fx_rates.py
banking_mcp/db/: __init__.py  config.py  manager.py  schema_fetcher.py
banking_mcp/knowledge/: bank_knowledge.py  bank_public_info.py  help_center.py  knowledge_base.py  semantic_catalog.py  semantic_synonyms.py
banking_mcp/mcp_tools/: __init__.py  dashboard_tools.py  db_tools.py
banking_mcp/normalization/: entity_normalizer.py  merchant_normalization.py
banking_mcp/policy/: guardrails.py  policies.py
banking_mcp/prompts/: __init__.py  banking_help.py  banking_prompts.py
banking_mcp/resources/: __init__.py  account_summary.py  banking_resources.py  categories_loader.py  glossary_loader.py  statement_resource.py  table_descriptions_loader.py
banking_mcp/resources/data/: merchant_aliases.json  payment_glossary.json  transaction_categories.json
banking_mcp/tools/: __init__.py  _provider.py  accounts.py  analysis.py  classification_tools.py  dashboard_tools.py  db_tools.py  fx.py  public_info.py  statement.py  transactions.py
data/: db_config.json
data/table_descriptions/: scards.json
docs/: production_prompt.md  production_prompt_domain_queries_catalog.md
docs/specs/: AI_CardPayments_Agent_UseCase.docx  AI_CardPayments_Agent_UseCase.md
scripts/: convert_transaction_categories.py  convert_usecase_docx.py
tests/unit/: test_audit_log_query.py  test_categories_loader.py  test_classification.py  test_classification_phase6.py  test_coverage_edges.py  test_dashboard_generator.py  test_dashboard_manager.py  test_db_config.py  test_db_manager.py  test_executor.py  test_mcp_tools.py  test_multi_db_drivers.py  test_oracle_support.py  test_prompts.py  test_redaction.py  test_resources.py  test_schema_fetcher.py  test_server.py  test_tools_api.py
