[project]
name = "banking-mcp-server"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx==0.27.0",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "PyJWT==2.9.0",
    "itsdangerous>=2.1.0",
    "python-oracledb>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["banking_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
