[project]
name = "banking-mcp-server"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # MCP
    "mcp>=1.0.0",

    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data analysis
    "pandas>=2.0.0",
    "numpy>=1.26.0",

    # HTTP (used by tests / future tools)
    "httpx==0.27.0",

    # Config / Validation
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",

    # Sandbox
    "RestrictedPython>=7.0",

    # Oracle (primary DB)
    "oracledb>=2.0.0",
]

[project.optional-dependencies]
# Drivers for non-primary databases. Install with `pip install .[multi-db]`.
multi-db = [
    "psycopg[binary]>=3.1.0",   # PostgreSQL
    "pymysql>=1.1.0",            # MySQL / MariaDB
    "duckdb>=0.9.0",             # DuckDB (file or in-memory)
    "clickhouse-connect>=0.7.0", # ClickHouse (HTTP)
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["banking_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
